--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,25 @@ $primary: #ff9800;
 $dark: #212529;
 $lightGray: #6c757d;
 
+// Media Query Mixins
+@mixin desktop {
+  @media screen and (max-width: 1024px) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin mobile {
+  @media screen and (max-width: 475px) {
+    @content;
+  }
+}
+
 // Base Styles
 * {
   margin: 0;
@@ -69,6 +88,10 @@ html {
   &__list {
     display: flex;
     list-style: none;
+
+    @include tablet {
+      display: none;
+    }
   }
 
   &__list-item:nth-child(n + 2) {
@@ -81,13 +104,42 @@ html {
     text-decoration: none;
     letter-spacing: 0.125em;
     transition: color 0.3s ease;
+    position: relative;
+
+    &:after {
+      content: "";
+      width: 0%;
+      height: 1px;
+      position: absolute;
+      bottom: -5px;
+      left: 50%;
+      background-color: $primary;
+      transform: translateX(-50%);
+      transition: width 0.3s ease;
+    }
 
     &.active {
       color: lighten($primary, 10%);
+
+      &:after {
+        width: 100%;
+      }
     }
 
     &:not(.active):hover {
       color: $primary;
+
+      &:after {
+        width: 100%;
+      }
+    }
+  }
+
+  &__menu-icon {
+    display: none;
+
+    @include tablet {
+      display: block;
     }
   }
 
@@ -99,6 +151,10 @@ html {
     .navbar__link:not(.active),
     .navbar__brand {
       color: #242424;
+    }
+
+    .navbar__link:not(.active):hover {
+      color: $primary;
     }
   }
 }
@@ -136,6 +192,14 @@ html {
     font-weight: 400;
     text-transform: uppercase;
     letter-spacing: 0.125em;
+
+    @include desktop {
+      font-size: 18px;
+    }
+
+    @include tablet {
+      font-size: 16px;
+    }
   }
 
   &__name {
@@ -143,6 +207,16 @@ html {
     font-weight: 700;
     font-size: 72px;
     color: #fff;
+
+    @include desktop {
+      font-size: 64px;
+    }
+
+    @include tablet {
+      font-size: 50px;
+      margin: 12.5px 0;
+      width: 90%;
+    }
   }
 
   &__paragraph {
@@ -153,6 +227,20 @@ html {
     color: rgba(#fff, 0.75);
     font-size: 18px;
     line-height: 1.5em;
+
+    @include desktop {
+      font-size: 16px;
+      line-height: 1.6em;
+      max-width: 650px;
+    }
+
+    @include tablet {
+      font-size: 14px;
+      line-height: 1.55em;
+      width: 80%;
+      max-width: unset;
+      min-width: 300px;
+    }
 
     &-link {
       color: $primary;
@@ -182,9 +270,15 @@ html {
   letter-spacing: 0.125em;
   transition: 0.3s ease-in-out;
   font-family: "Montserrat", sans-serif;
+  cursor: pointer;
 
   svg {
     margin-left: 10px;
+  }
+
+  @include desktop {
+    font-size: 13px;
+    padding: 14px 28px;
   }
 
   &__primary {
@@ -352,6 +446,10 @@ html {
         justify-content: center;
         flex-wrap: wrap;
         width: 80%;
+
+        @include desktop {
+          width: 100%;
+        }
       }
 
       &__skill-group {
@@ -367,6 +465,15 @@ html {
 
         &:last-of-type {
           margin-top: 5%;
+        }
+
+        @include tablet {
+          width: 100%;
+          min-height: 100px;
+
+          &:nth-child(2) {
+            margin: 7.5% 0 0 0;
+          }
         }
 
         &-title {
@@ -757,5 +864,93 @@ html {
         margin-left: 7.5px;
       }
     }
+  }
+}
+
+// Contact Section Styles
+.contact-us {
+  &__form {
+    width: 90%;
+    max-width: 623px;
+    font-family: "Montserrat", sans-serif;
+    margin: 0 auto;
+
+    &-grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      column-gap: 40px;
+
+      & > div {
+        width: 100%;
+      }
+    }
+
+    label {
+      color: #fff;
+      font-size: 14px;
+      display: block;
+      margin-bottom: 10px;
+    }
+
+    &-group {
+      margin-top: 30px;
+
+      &:last-of-type {
+        margin-top: 40px;
+      }
+    }
+
+    &-input,
+    &-textarea {
+      width: 100%;
+      height: 47px;
+      background: rgba(255, 255, 255, 0.1);
+      border: none;
+      padding-left: 24px;
+      color: #fff;
+      font-size: 14px;
+      outline: none !important;
+      transition: 0.25s ease-in-out;
+      border-bottom: 2px solid transparent;
+
+      &::-webkit-input-placeholder {
+        color: rgba(255, 255, 255, 0.6);
+        font-family: "Montserrat", sans-serif;
+      }
+
+      &:focus {
+        box-shadow: 0px 0px 15px rgba(#000, 0.25);
+        border-color: $primary;
+      }
+    }
+
+    &-textarea {
+      height: 120px;
+      padding-top: 16px;
+      resize: none;
+    }
+  }
+}
+
+// Footer Styles
+.footer {
+  padding: 56px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  &__button {
+    margin-bottom: 20px;
+    padding: 12px 30px;
+  }
+
+  &__text {
+    font-family: "Open Sans", sans-serif;
+    font-size: 14px;
+    text-align: center;
+    width: 90%;
+    margin: 0 auto;
+    color: #a2aab0;
   }
 }
