--- a/sass/main.scss
+++ b/sass/main.scss
@@ -159,6 +159,28 @@ html {
   }
 }
 
+// Mobile Navigation
+.mobile-nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 11;
+  height: 100vh;
+  width: 100vw;
+  font-family: "Montserrat", sans-serif;
+  background-color: rgba(#fff, 0.75);
+  backdrop-filter: blur(100);
+
+  &__close-icon {
+    position: absolute;
+    right: 5vw;
+    top: 25px;
+  }
+}
+
 // Header
 .header {
   width: 100vw;
@@ -214,7 +236,7 @@ html {
 
     @include tablet {
       font-size: 50px;
-      margin: 12.5px 0;
+      margin: 12.5px auto;
       width: 90%;
     }
   }
@@ -857,7 +879,7 @@ html {
       transition: opacity 0.25s ease;
 
       &:hover {
-        opacity: 0.75;
+        opacity: 0.5;
       }
 
       svg {
